readme and gh pages

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "green-api",
-  "homepage": "https://varushchi.github.io/green-api",
+  "homepage": "https://varushchi.github.io/green-api/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
